Fix sizing on mobile

--- a/html/css/art.css
+++ b/html/css/art.css
@@ -23,18 +23,19 @@ body{
     width: 100%;
 }
 
-@media screen and (min-width: 992px) {
-    p {
-        font-size: 1.2em;
-    }
-    h1{
-        font-size: 2.5rem;
-    }
+@media screen and (min-width: 1200px) {
+  .modal-dialog {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%) !important;
+  }
 }
 
-.modal-dialog {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) !important;
-    }
+@media screen and (max-width: 500px) {
+  .modal-dialog {
+          position: absolute;
+          top: 50%;
+          transform: translate(0, -50%) !important;
+  }
+}
